--- a/stylesheets/singleuse.css
+++ b/stylesheets/singleuse.css
@@ -23,26 +23,6 @@
 	width:500px;
 	font-size:20px;
 }
-#indeximg2{
-	max-width:500px;
-	width: 100%;
-	height:400px;
-	padding:5px;
-	padding-top:30px;
-	padding-top:30px;
-}
-#anywhere{
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	font-size:40px;
-	line-height:0.8;
-	margin:40px;
-}
-#img2div{
-	background-color:#363636;
-	padding:5px 25px;
-	text-align:center;
-	margin:40px 0px;
-}
 #startnow{
 	margin:60px;
 	background-color:#0088d0;
@@ -51,6 +31,10 @@
 }
 #startnow:hover{
 	background-color:#015582;
+}
+#introvid{
+	align-self: center;
+	margin: 5em;
 }
 @media (max-width: 800px) {
 	#indeximg1, #indeximg2, #indeximg3 {
