--- a/stylesheets/courses.css
+++ b/stylesheets/courses.css
@@ -1,17 +1,7 @@
-.one{
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	font-size:40px;
-	line-height:0.8;
-	margin:40px;
-	text-align:center;
-}
-.flex{
+div:first-of-type{
 	display: flex;
 	justify-content:center;
 	flex-direction:column;
 }
-.main{
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-size:20px;
-	text-align: center;
-}
+
+main{ background-origin: padding-box;}
