--- a/stylesheets/wsfstylesheet.css
+++ b/stylesheets/wsfstylesheet.css
@@ -1,3 +1,4 @@
+/*MAIN DO NOT TOUCH*/
 body{
 	background-color:#222;
 	font-family:arial;
@@ -13,6 +14,25 @@ a{
 	color:#fff;
 	padding:25px 15px;
 }
+footer{
+	padding: 40px;
+	text-align:center;
+	background-color: #1b1b1b;
+	margin-top: auto;
+}
+/*close*/
+
+/*COMMONALITIES*/
+.one{
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-size:40px;
+	line-height:0.8;
+	margin:40px;
+	text-align:center;
+}
+/*close*/
+
+/*HEADER*/
 header{
 	background-color:#0077b6;
 	display:flex;
@@ -31,14 +51,28 @@ header h1{
 #logo{
 	padding:0px;
 }
-input.rightalign{
-	top:2em;
-	vertical-align:middle;
-}
+/*close*/
+
+/*NAV*/
 nav{
 	background-color:#0088d0;
 	padding:25px;
 }
+nav a{
+	transition-property: background-color;
+	transition-duration: 0.5s;
+	transition-timing-function: ease;
+}
+nav a:hover{
+	background-color:#015582;
+}
+input.rightalign{
+	top:2em;
+	vertical-align:middle;
+}
+/*close*/
+
+/*MISC*/
 .rightalign{
 	float:right;
 }
@@ -48,13 +82,5 @@ nav{
 .centeralign{
 	float:center;
 }
-nav a:hover{
-	background-color:#015582;
-}
-footer{
-	padding: 40px;
-	text-align:center;
-	background-color: #1b1b1b;
-	margin-top: auto;
-}
+/*close*/
 /*jbsrizkewl*/
