--- a/stylesheets/courses.css
+++ b/stylesheets/courses.css
@@ -1,7 +1,21 @@
-div:first-of-type{
+.flex{
 	display: flex;
-	justify-content:center;
 	flex-direction:column;
 }
 
-main{ background-origin: padding-box;}
+ul{
+    list-style-type: none;
+}
+
+li{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2em;
+
+    margin: 2em 0.5em 0.5em 0.5em;
+}
+
+p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 1em 3em;
+    font-size: 1.5em;
+}
