--- a/stylesheets/donate.css
+++ b/stylesheets/donate.css
@@ -7,17 +7,18 @@
 	flex-grow:1;
 	margin-left:30%;
 }
-.main{
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-size:20px;
-	text-align: center;
-}
 #startnow{
 	margin:60px;
 	background-color:#0088d0;
 	border-radius: 10px;
 	padding:10px;
+	width: fit-content;
+	transform: scale(1);
+	transition-property: transform, background-color;
+	transition-duration: 0.3s;
+	transition-timing-function: ease-in-out;
 }
 #startnow:hover{
 	background-color:#015582;
+	transform: scale(1.1);
 }
