--- a/stylesheets/wsfstylesheet.css
+++ b/stylesheets/wsfstylesheet.css
@@ -22,13 +22,20 @@ footer{
 }
 /*close*/
 
-/*COMMONALITIES*/
-.one{
+/*TXT*/
+.headTxt{
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size:40px;
-	line-height:0.8;
+	line-height:1;
 	margin:40px;
 	text-align:center;
+}
+.mainTxt{
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size:20px;
+	max-width: 80%;
+	margin: auto;
+	text-align: justify;
 }
 /*close*/
 
@@ -83,4 +90,20 @@ input.rightalign{
 	float:center;
 }
 /*close*/
+
+#sdg{
+	margin:40px;
+	background-color:#0088d0;
+	border-radius: 10px;
+	padding:30px 10px;
+	width: fit-content;
+	transform: scale(1);
+	transition-property: transform, background-color;
+	transition-duration: 0.3s;
+	transition-timing-function: ease-in-out;
+}
+#sdg:hover{
+	background-color:#015582;
+	transform: scale(1.1);
+}
 /*jbsrizkewl*/
